Added mercurial support

--- a/lib/bundler/templates/newgem/Rakefile.tt
+++ b/lib/bundler/templates/newgem/Rakefile.tt
@@ -1,4 +1,8 @@
 #!/usr/bin/env rake
 
 require 'bundler'
+<% if config[:hg]%>
+Bundler::GemHelperMercurial.install_tasks
+<% else %>
 Bundler::GemHelper.install_tasks
+<% end %>
