Only run `git ls-files` once.
1. Get a listing of all files.
2. Intersect the listing of all files with Dir[] listings, to avoid
   shelling out multiple times.

--- a/lib/bundler/templates/newgem/newgem.gemspec.tt
+++ b/lib/bundler/templates/newgem/newgem.gemspec.tt
@@ -9,8 +9,8 @@ Gem::Specification.new do |gem|
   gem.homepage      = ""
 
   gem.files         = `git ls-files`.split($\)
-  gem.executables   = gem.files.grep(%r{^bin/}).map{ |f| File.basename(f) }
-  gem.test_files    = gem.files.grep(%r{^(test|spec|features)/})
+  gem.executables   = (gem.files & Dir["bin/*"]).map { |f| File.basename(f) }
+  gem.test_files    = (gem.files & Dir["{test,spec,features}/{**/}*"])
   gem.name          = <%=config[:name].inspect%>
   gem.require_paths = ["lib"]
   gem.version       = <%=config[:constant_name]%>::VERSION
